tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00111.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.c-testsuite/case_00111.c" (c, x86_64-unknown-linux-gnu)
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s16i, "s", align 2
    %2 = alloca s64i, "l", align 8
    %3 = const 0 : s32i
    store %3, %0
    %4 = const 1 : s16i
    store %4, %1, align 2
    %5 = const 1 : s64i
    store %5, %2, align 8
    %6 = load %2 : s64i, align 8
    %7 = load %1 : s16i, align 2
    %8 = cast(integral) %7 : s64i
    %9 = sub %8, %6 : s64i [nsw]
    %10 = cast(integral) %9 : s16i
    store %10, %1, align 2
    %11 = load %1 : s16i, align 2
    %12 = cast(integral) %11 : s32i
    store %12, %0
    %13 = load %0 : s32i
    return %13
}
