tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00112.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.c-testsuite/case_00112.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[4] = "abc" [cir_private, default, align 1, dso_local, constant]

fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = get_global @.str : s8i[4]*
    %3 = cast(array_to_ptrdecay) %2 : s8i*
    %4 = const #cir.ptr<null> : void*
    %5 = cast(bitcast) %4 : s8i*
    %6 = cmp eq %3, %5 : bool
    %7 = cast(bool_to_int) %6 : s32i
    store %7, %0
    %8 = load %0 : s32i
    return %8
}
