tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00116.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.c-testsuite/case_00116.c" (c, x86_64-unknown-linux-gnu)
fn f(%arg0: s32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i):
        %5 = alloca s32i, "f", align 4
        %6 = alloca s32i, "__retval", align 4
        store %arg0, %5
        %7 = load %5 : s32i, align 4
        store %7, %6
        %8 = load %6 : s32i
        return %8
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = const 0 : s32i
    %3 = call @f(%2) : s32i [all]
    store %3, %0
    %4 = load %0 : s32i
    return %4
}
