tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00117.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00117.c" (c, x86_64-unknown-linux-gnu)
global __const.main.x : s32i[2] = [1] [cir_private, default, dso_local, constant]

fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i[2], "x", align 4
    %2 = const 0 : s32i
    store %2, %0
    %3 = get_global @__const.main.x : s32i[2]*
    copy %1, %3
    %4 = const 1 : s64i
    %5 = get_element %1[%4] : s32i*
    %6 = load %5 : s32i, align 4
    store %6, %0
    %7 = load %0 : s32i
    return %7
}
