tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00119.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.c-testsuite/case_00119.c" (c, x86_64-unknown-linux-gnu)
global x : double = 1.000000e+02 [external, default, align 8, dso_local]

fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = get_global @x : double*
    %3 = load %2 : double, align 8
    %4 = const 1 : s32i
    %5 = cast(int_to_float) %4 : double
    %6 = cmp lt %3, %5 : bool
    %7 = cast(bool_to_int) %6 : s32i
    store %7, %0
    %8 = load %0 : s32i
    return %8
}
